# erlang-oc

./: .gitignore  Cargo.toml  README.md  rebar.config
crates/native/: Cargo.toml
crates/native/src/: lib.rs
eqc/: enc_dec_eqc.erl  encode_decode_eqc.erl
native/: decoder.rs  encoder.rs  iter.rs  lib.rs  res.rs
src/: erlang_oc.app.src  erlang_oc.erl  erlang_oc_genetic.erl  erlang_oc_util.erl
test/: basic_test.erl  enc_dec_SUITE.erl  flip_SUITE.erl
