[package]
name = "native"
version = "0.1.0"
authors = ["Rahul Garg <vihu89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git", branch = "master" }
online_codes = { git = 'https://github.com/vihu/online-codes', branch = 'rg/expose-decoder-new' }
